# whisperx-microservice

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  server_app.py  settings.py
app/api/: __init__.py  endpoints.py  models.py
app/core/: __init__.py  alignment_service.py  av_service.py  diarization_service.py  whisper_service.py
docs/: USER_GUIDE.md
helm/ffmpeg-microservice/: Chart.yaml  values.yaml
helm/ffmpeg-microservice/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
