[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[project]
name = "ffmpeg-microservice"
version = "3.0.0"
description = "FFmpeg microservice with WhisperX transcription and speaker diarization"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [
    {name = "Daria Hridina-Zmitrovich"},
    {name = "Damian Klocek"}
]
dependencies = [
    # Web framework
    "Flask>=3.1.0",
    "flask-cors>=5.0.1",
    "gunicorn>=22.0.0",

    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",

    # Transcription (WhisperX with faster-whisper backend)
    "whisperx>=3.1.1",
    "faster-whisper>=0.10.0",

    # Speaker diarization (PyAnnote)
    "pyannote.audio>=3.1.0",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "soundfile>=0.12.0",
    "numpy<2.0.0",

    # Audio processing
    "av>=11.0.0",

    # Utilities
    "loguru>=0.7.3",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
